--- a/config/train_nougat.yaml
+++ b/config/train_nougat.yaml
@@ -2,7 +2,7 @@ resume_from_checkpoint_path: null
 result_path: "result"
 model_path: null
 dataset_paths: ["/test/data/train.jsonl"]
-tokenizer: "nougat-0.1.0-small/tokenizer.json"
+tokenizer: "/root/.cache/torch/hub/nougat-0.1.0-small/tokenizer.json"
 exp_name: "nougat"
 train_batch_sizes: [1]
 num_workers: 8
