--- a/config/train_nougat.yaml
+++ b/config/train_nougat.yaml
@@ -1,7 +1,7 @@
 resume_from_checkpoint_path: null
 result_path: "result"
 model_path: null
-dataset_paths: ["/test/data/train.jsonl"]
+dataset_paths: ["/kaggle/working/nougat-cp/test/data/train.jsonl"]
 tokenizer: "/root/.cache/torch/hub/nougat-0.1.0-small/tokenizer.json"
 exp_name: "nougat"
 train_batch_sizes: [1]
