--- a/config/train_nougat.yaml
+++ b/config/train_nougat.yaml
@@ -27,10 +27,11 @@ min_lr: 7.5e-6
 lr_step: 16
 gamma: 0.9996
 warmup_steps: 250
-num_training_samples_per_epoch: 10000
+num_training_samples_per_epoch: 6
 max_epochs: 30
 max_steps: -1
 val_check_interval: null
 check_val_every_n_epoch: 1
 gradient_clip_val: 0.5
 verbose: False
+debug: True
